// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moderation-events get event gets an event by specific id 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "user(2)",
  "event": Object {
    "$type": "com.atproto.admin.defs#modEventLabel",
    "comment": "[AutoModerator]: Applying labels",
    "createLabelVals": Array [
      "test-label",
    ],
    "negateLabelVals": Array [],
  },
  "id": 1,
  "subject": Object {
    "$type": "com.atproto.admin.defs#recordView",
    "blobCids": Array [],
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "repo": Object {
      "did": "user(0)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "moderation": Object {
        "subjectStatus": Object {
          "createdAt": "1970-01-01T00:00:00.000Z",
          "id": 1,
          "lastReportedAt": "1970-01-01T00:00:00.000Z",
          "lastReviewedAt": "1970-01-01T00:00:00.000Z",
          "lastReviewedBy": "user(1)",
          "reviewState": "com.atproto.admin.defs#reviewEscalated",
          "subject": Object {
            "$type": "com.atproto.admin.defs#repoRef",
            "did": "user(0)",
          },
          "subjectBlobCids": Array [],
          "subjectRepoHandle": "alice.test",
          "tags": Array [
            "lang:und",
          ],
          "takendown": false,
          "updatedAt": "1970-01-01T00:00:00.000Z",
        },
      },
      "relatedRecords": Array [
        Object {
          "$type": "app.bsky.actor.profile",
          "avatar": Object {
            "$type": "blob",
            "mimeType": "image/jpeg",
            "ref": Object {
              "$link": "cids(2)",
            },
            "size": 3976,
          },
          "description": "its me!",
          "displayName": "ali",
          "labels": Object {
            "$type": "com.atproto.label.defs#selfLabels",
            "values": Array [
              Object {
                "val": "self-label-a",
              },
              Object {
                "val": "self-label-b",
              },
            ],
          },
        },
      ],
    },
    "uri": "record(0)",
    "value": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.record",
        "record": Object {
          "cid": "cids(1)",
          "uri": "record(1)",
        },
      },
      "text": "yoohoo label_me",
    },
  },
  "subjectBlobCids": Array [],
  "subjectBlobs": Array [],
}
`;

exports[`moderation-events query events returns all events for record or repo 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(1)",
    "creatorHandle": "alice.test",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventReport",
      "comment": "X",
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 13,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(2)",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventTag",
      "add": Array [
        "lang:en",
        "lang:i",
      ],
      "remove": Array [],
    },
    "id": 8,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(1)",
    "creatorHandle": "alice.test",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventReport",
      "comment": "X",
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 7,
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "bob.test",
  },
]
`;

exports[`moderation-events query events returns all events for record or repo 2`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "creatorHandle": "bob.test",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventReport",
      "comment": "X",
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 12,
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(1)",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventTag",
      "add": Array [
        "lang:und",
      ],
      "remove": Array [],
    },
    "id": 6,
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "creatorHandle": "bob.test",
    "event": Object {
      "$type": "com.atproto.admin.defs#modEventReport",
      "comment": "X",
      "reportType": "com.atproto.moderation.defs#reasonSpam",
    },
    "id": 5,
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectBlobCids": Array [],
    "subjectHandle": "alice.test",
  },
]
`;
